# worldbank_etl_fastapi

./: .gitignore  README.md  dashboard.py  main_api.py  main_etl.py  pyproject.toml
app/: api.py
app/core/: config.py
app/etl/: extract.py  load.py  run_etl.py  transform.py
app/models/: models.py
app/routers/: countries.py  indicator_values.py  indicators_meta.py  topics.py
app/schemas/: countries.py  indicator_values.py  indicators_meta.py  topics.py
app/tests/: api_quick_check.ipynb  etl_quick_check.ipynb
app/utils/: logger.py
config/: config.py  test.ipynb
scripts/: main.py  run_api.py  run_etl.py
src/etl/: extract.py  load.py  transform.py
src/models/: models.py
utils/: logger.py
